===v7.3.2===
====Bug Fixes====
 * Fixed: Condition_THREATSCALED: Usage: UnitDetailedThreatSituation("unit" [, "mob"])

 ===v7.3.1===
====Bug Fixes====
 * Fixed: UnitAttributes.lua:277: 'for' limit must be a number.

===v7.3.0===
 * The suggestion list now works with arrow keys to pick what line tab will insert.
 * You can now use the suggestion list to pick condition types (the Condition Type dropdown now has a textbox on it).
 * The Player Specialization condition is now deprecated in favor of the Unit Specialization condition.
 * On Left/Right Click notification triggers no longer make icons click-interactive when the icon is hidden (opacity 0).

====Bug Fixes====
 * Fixed some issues with the All-Unit Buff/Debuff icon type caused by some auras (A Murder of Crows) not firing combat log events on application/removal.
 * Icons should no longer be treated as being on cooldown for color settings if they're tracking an ability that still has charges remaining.
 * Fixed a typo that could sometimes break icon sorting, and may have also broken meta icons occasionally.
 * Refactored the configuration for Animation and Text notifications, fixing a minor issue with settings not saving in the process.
 * The Unit Specialization condition should now work for arena enemies from your own server.
 * Fixed: meta.lua line 191: attempt to index field 'IconsLookup' (a nil value) (Ticket #1114)

===v7.2.6===
====Bug Fixes====
 * Implemented a better fix to animations missing required anchors, since the fix in v7.2.5 broke several things.

===v7.2.5===
 * Tweaked some of the default text layouts so that they more closely resemble their pre-WoW-6.1 appearance.
 * Removed the diminishing returns duration setting, as it is now always 18 seconds.

====Bug Fixes====