@@ -1,4 +1,5 @@
 ===v7.3.2===
+ * Unit Cooldown icons can now filter spells based on the known class spells of a unit.
 ====Bug Fixes====
  * Fixed: Condition_THREATSCALED: Usage: UnitDetailedThreatSituation("unit" [, "mob"])
 
